fix reply alignment

--- a/src/main/resources/scss/content/components/_discussion-details.scss
+++ b/src/main/resources/scss/content/components/_discussion-details.scss
@@ -100,6 +100,10 @@
 	padding: 1rem 0 0.5rem 0;
 	position: relative;
 
+	.charms {
+		top: -1rem;
+	}
+
 	.discussion-reply {
 		.placeholder,
 		.body {
